<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="deswebmob.usjt.br.projetocartorio.controller.DetalheSenhaActivity">

    <TextView
        android:id="@+id/lbl_servico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servico"/>
    <TextView
        android:id="@+id/tv_servico1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_servico"/>

    <TextView
        android:id="@+id/lbl_categoria"
        android:layout_marginTop="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:layout_below="@id/tv_servico1"/>
    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_categoria"/>

    <TextView
        android:id="@+id/lbl_senha"
        android:layout_marginTop="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:layout_below="@id/tv_categoria"/>
    <TextView
        android:id="@+id/tv_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_senha"/>
    <TextView
        android:id="@+id/lbl_horaGerada"
        android:layout_marginTop="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_senha"
        android:text="@string/horaGerada"/>
    <TextView
        android:id="@+id/tv_horaGerada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_horaGerada"/>

    <TextView
        android:id="@+id/lbl_inicioAt"
        android:layout_marginTop="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicioAt"
        android:layout_below="@id/tv_horaGerada"/>
    <TextView
        android:id="@+id/tv_previsaoInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_inicioAt"/>

    <TextView
        android:id="@+id/lbl_fimAt"
        android:layout_marginTop="20px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fimAt"
        android:layout_below="@id/tv_previsaoInicio"/>
    <TextView
        android:id="@+id/tv_previsaoFim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_fimAt"/>

    <Button
        android:id="@+id/bt_irPainel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:text="Ir para painel"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_below="@id/tv_previsaoFim"/>

</RelativeLayout>
